# dynamic-lyrics

./: .gitignore  PLAN.md  PROCESSING.md  README.md  main.py  pyproject.toml
app/: config.py  main.py
app/api/: routes_alignments.py  routes_jobs.py  routes_songs.py  routes_sources.py
app/db/: session.py  tables.py
app/models/: schemas.py
app/services/: aligner_base.py  aligner_mock.py  audio_normalize.py  lrc_correction.py  lrc_parser.py  lyrics_parser.py  song_builder.py  source_service.py  youtube_import.py
app/workers/: job_runner.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/app/: AppRouter.tsx
frontend/src/components/: JobStatusCard.tsx  LyricsPanel.tsx  PageShell.tsx  PlayerControls.tsx  SectionCard.tsx  SourceModeSwitch.tsx
frontend/src/lib/: api.ts  time.ts  workflow.ts
frontend/src/pages/: ImportPage.tsx  JobPage.tsx  PlayerPage.tsx
frontend/src/types/: api.ts
tests/backend/: conftest.py  test_alignment_workflow.py  test_api_edges.py  test_lrc_correction.py  test_lrc_parser.py  test_lyrics_parser.py  test_song_builder.py
