[project]
name = "dynamic-lyrics"
version = "0.1.0"
description = "Backend prototype for a dynamic lyrics learning app"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "pydantic>=2.11.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.uv.workspace]
members = [
    "whisperx-poc",
]
